# libsnout

./: .gitignore  CONFIGURING.md  Cargo.toml  README.md  config.toml  flake.nix
crates/gc0308/: Cargo.toml
crates/gc0308/src/: lib.rs  sonix.rs
crates/mobilenetv4-burn/: Cargo.toml
crates/mobilenetv4-burn/src/model/: conv_norm.rs  mobilenetv4.rs  mod.rs  uib.rs
crates/mobilenetv4-burn/tests/: keys.rs
crates/sampleio/: Cargo.toml
crates/sampleio/src/: error.rs  flags.rs  lib.rs
crates/snout-cli/: Cargo.toml  build.rs
crates/snout-cli/src/: commands.rs  log_writer.rs  main.rs  status.rs
crates/snout-cli/src/commands/: track.rs
crates/snout-sample-file/: Cargo.toml
crates/snout-sample-file/src/: flags.rs  frame.rs  lib.rs  reader.rs  writer.rs
crates/snout-train/: Cargo.toml
crates/snout-train/assets/: expr_pretrain.safetensors  gaze_pretrain.safetensors  merged_template.onnx
crates/snout-train/src/: export.rs  lib.rs  spec.rs
crates/snout-train/src/data/: batch.rs  capture.rs  dataset.rs  flatten.rs  label.rs  mixup.rs  mod.rs  samples.rs  split.rs  stream.rs  weighted.rs
crates/snout-train/src/data/augment/: blur.rs  intensity.rs  mod.rs  spatial.rs
crates/snout-train/src/model/: expr_net.rs  eye_net.rs  merged.rs  mod.rs  pretrained.rs  tower.rs
crates/snout-train/src/train/: config.rs  eval.rs  expr.rs  gaze.rs  loss.rs  mod.rs  optim.rs  progress.rs  schedule.rs
include/: snout.h
src/: config.rs  ffi.rs  lib.rs  output.rs  weights.rs
src/calibration/: eye.rs  face.rs  mod.rs
src/capture/: discovery.rs  internal.rs  mod.rs  mono.rs  sensor.rs  stereo.rs
src/capture/internal/: v4l.rs
src/pipeline/: eye.rs  face.rs  mod.rs
src/pipeline/internal/: inference.rs
src/sample/: collector.rs  mod.rs  sampler.rs
src/sample/net/: mod.rs  overlay.rs
src/sample/net/internal/: connection.rs  framer.rs  mod.rs  packet.rs
src/track/: eye.rs  face.rs  output.rs
src/train/data/: capture_frame.rs  mod.rs
tools/: convert_checkpoints.py  export_template.py  requirements.txt  validate_gaze.py
