[workspace]
members = ["crates/*"]

[package]
name = "snout"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
imageproc = { version = "0.26.1", default-features = false }
rosc = "0.11.4"
thiserror = "2.0.18"
v4l = "0.14.0"
byteorder = "1.5.0"
snout-sample-file = { path = "crates/snout-sample-file" }
gc0308 = { path = "crates/gc0308" }
rand = "0.8"
tracing = "0.1"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-20", "cuda", "load-dynamic", "ndarray", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
ndarray = "0.17.2"
ureq = { version = "3.3.0", default-features = false }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
lto = "thin"
