[package]
name = "snout-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
snout = { path = "../.." }
snout-train = { path = "../snout-train" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["wgpu-vulkan"]

wgpu-vulkan = ["snout-train/wgpu-vulkan"]
torch-cpu = ["snout-train/torch-cpu"]
torch-cuda = ["snout-train/torch-cuda"]
